# gtest_demo

./: CmakeLists.txt  README.md
demo/: CMakeLists.txt
demo/01_gtest_hello/: CMakeLists.txt  gtest_hello.cpp  gtest_hello_default_main.cpp  gtest_hello_testsuite.cpp
demo/02_gtest_assertion/: CMakeLists.txt  gtest_assertion_test.cpp
demo/03_gtest_event/: CMakeLists.txt  gtest_event_test.cpp
demo/04_gtest_parametric/: CMakeLists.txt  gtest_param_test.cpp  gtest_typed_param_test.cpp  gtest_typed_test.cpp
demo/05_gtest_prj_demo/: CMakeLists.txt
demo/05_gtest_prj_demo/src/: Add.cpp  Sub.cpp
demo/05_gtest_prj_demo/test/: AddTest.cpp  CMakeLists.txt  SubTest.cpp
gtest/lib/cmake/GTest/: GTestTargets.cmake
test/: CMakeLists.txt
